chore : fix filter alignment

--- a/src/frontend/ProductFilter/ProductFilter.css
+++ b/src/frontend/ProductFilter/ProductFilter.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   gap: 2rem;
   color: whitesmoke;
   position: fixed;
@@ -42,5 +42,6 @@
 filter-section{
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: .5rem;
 }
